@@ -1,5 +1,6 @@
 mlr_2.4:
 - WrappedModel printer was slightly improved
+- ReampleResult now stores the runtime it took to resample in a slot
 - getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'
 - getTaskData now has recodeY = "drop.levels" which drops empty factor levels
 - option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
